# test-task-fastapi

./: .env  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  script.py
migrations/: env.py
migrations/versions/: df9a6e2f9f61_add_models.py
scripts/: create_20_machines.py  update_locations_3min.py  uploading_locations.py
src/: config.py  main.py
src/api/: deps.py  routers.py
src/api/cargos/: routes.py
src/api/machines/: routes.py
src/db/: db.py
src/dto/: cargo.py  location.py  machine.py
src/migrations/: env.py
src/models/: cargo.py  location.py  machine.py
src/repositories/: cargo.py  location.py  machine.py
src/services/: cargo.py  location.py  machines.py
src/utils/: repository.py  uow.py
